--- a/package.json
+++ b/package.json
@@ -16,9 +16,17 @@
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
     "@angular/forms": "~10.1.6",
+    "@angular/google-maps": "^10.2.5",
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "@google/maps": "^1.1.3",
+    "angular-animations": "^0.11.0",
+    "bootswatch": "^4.5.3",
+    "google-maps": "^4.3.3",
+    "ngx-loading": "^8.0.0",
+    "ngx-pagination": "^5.0.0",
+    "ngx-spinner": "^10.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
